--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build it tpatel84/docker-react -f Dockerfile.dev .
+  - docker build -t tpatel84/docker-react -f Dockerfile.dev .
 
 script:
   - docker run tpatel84/docker-react npm run test -- --coverage
