--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
   - docker run tpatel84/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "react-test"
+  env: "ReactTest-env"
+  bucket_name: "elasticbeanstalk-us-west-2-548587940779"
+  bucket_path: "react-test"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret__access_key:
+    secure: "$AWS_SECRET_KEY"
+   
